--- a/CustomModule/BuildingManager/view/adminhtml/web/css/source/_module.less
+++ b/CustomModule/BuildingManager/view/adminhtml/web/css/source/_module.less
@@ -58,10 +58,8 @@
     display: none;
   }
 
-  /*
-  .page-layout-admin-login {
-    background-image: url("https://dvch1hlupt.cdn.hostvn.net/weltp");
-    //background-image: url(../CustomModule_BuildingManager/images/logo.png) !important;
+ /* .page-layout-admin-login {
+    //background-image: url("https://znews-photo.zadn.vn/w1024/Uploaded/qhj_yvobvhfwbv/2018_07_18/Nguyen_Huy_Binh1.jpg") !important;
+    background-image: url(../images/logo.png) !important;
   }
-  */
-
+*/
